--- a/styles.css
+++ b/styles.css
@@ -52,6 +52,7 @@ h2 {
 
 }
 
+
 .home, .aboutme, .myskill, .portofolio{
     width: 100%;
     height: 100vh;
@@ -277,3 +278,60 @@ h2 {
 .porto3 {
     background-image: url(images/porto3.jpg);
 }
+
+/* Hamburger menu */
+.toggle-button {
+    display: none; /* Sembunyikan tombol hamburger secara default */
+  }
+  
+  /* Tampilkan tombol hamburger hanya pada layar kecil */
+  @media (max-width: 768px) {
+    .toggle-button {
+      display: block;
+      font-size: 1.5rem;
+      color: white;
+      cursor: pointer;
+      position: absolute;
+      top: 20px;
+      right: 20px;
+      z-index: 1000;
+    }
+  
+    .navbar {
+      display: none; /* Sembunyikan menu navbar pada layar kecil */
+      flex-direction: column;
+      position: absolute;
+      top: 70px;
+      left: 0;
+      background-color: #051916;
+      width: 100%;
+      padding: 10px 0;
+    }
+  
+    .navbar.active {
+      display: flex; /* Tampilkan menu navbar saat tombol hamburger ditekan */
+      height: auto; /* Atur ketinggian navbar menjadi auto */
+      max-height: 300px; /* Atur ketinggian maksimum navbar */
+      overflow-y: auto; /* Tambahkan overflow-y untuk scrolling jika navbar terlalu panjang */
+      
+    }
+  
+    .navbar a {
+      color: white;
+      text-decoration: none;
+      padding: 10px 20px;
+      display: block;
+      transition: all 0.3s ease;
+    }
+  
+    .navbar a:hover {
+      background-color: #F1875E;
+    }
+    /* Tombol hamburger */
+    .toggle-button.active::before {
+        content: '\2716'; /* Tanda X */
+    }
+  
+  }
+  
+  
