--- a/styles.css
+++ b/styles.css
@@ -333,5 +333,41 @@ h2 {
     }
   
   }
+
+/* halaman contact start */
+body {
+    font-family: 'Poppins', sans-serif;
+    background-color: #111010;
+    color: #ffffff;
+    padding: 20px;
+  }
+  
+  input[type="text"], input[type="email"], input[type="tel"], textarea {
+    width: 100%;
+    padding: 10px;
+    margin-bottom: 20px;
+    border-radius: 5px;
+    background-color: #333;
+    color: #ffffff;
+  }
+  
+  input[type="submit"] {
+    background-color: #F1875E;
+    color: white;
+    padding: 12px 20px;
+    border: none;
+    border-radius: 4px;
+    cursor: pointer;
+  }
+  
+  input[type="submit"]:hover {
+    background-color: #b92016;
+  }
+  
+  .error {
+    color: red;
+  }
+
+  /* halaman contact end */
   
   
